--- a/public/scss/show.scss
+++ b/public/scss/show.scss
@@ -33,5 +33,5 @@
 }
 
 .outline{
-	text-shadow:0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #f00,0 0 3px #C0C0C0,0 0 3px #C0C0C0,0 0 3px #C0C0C0;
+	text-shadow:1px 1px 0 #FFF,-1px 1px 0 #FFF,1px -1px 0 #FFF,-1px -1px 0 #FFF;
 }
