fix login page2

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -218,21 +218,11 @@ footer {
   margin: 5px 0 0 10px;
   background-size: 11px !important;
 }
-@media only screen and (max-width: 980px) {
-  body {
-    background-image: url("/images/background_small.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center center;
-    background-size: cover;
-  }
-}
-@media only screen and (min-width: 981px) {
-  body {
-    background-image: url("/images/top_background.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center center;
-    background-size: cover;
-  }
+body {
+  background-image: url(/images/top_background.png);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: contain;
+  background-size: cover;
+  background-position: center center;
 }
