--- a/public/css/application.css
+++ b/public/css/application.css
@@ -219,10 +219,10 @@ footer {
   background-size: 11px !important;
 }
 body {
-  background-image: url(/images/top_background.png);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: contain;
-  background-size: cover;
+  background-image: url("/images/top_background.png");
   background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  background-attachment: fixed;
 }
