--- a/public/scss/posts.scss
+++ b/public/scss/posts.scss
@@ -83,7 +83,7 @@
 }
 body{
     background-image: url("/images/top_background.png");
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
