--- a/public/css/application.css
+++ b/public/css/application.css
@@ -72,6 +72,15 @@ footer {
     background-color: #fafafa;
   }
 }
+.container {
+  width: 1000px;
+}
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    overflow: hidden;
+  }
+}
 .profile-wrap {
   margin: 40px 0px;
 }
