--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,3 +1,12 @@
+.container {
+  width: 1000px;
+}
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    overflow: hidden;
+  }
+}
 .profile-wrap {
   margin: 40px 0px;
 }
