--- a/public/scss/edit.scss
+++ b/public/scss/edit.scss
@@ -20,3 +20,8 @@ display:-webkit-flex;  -webkit-justify-content: center;
 .one{background-color:#f2f2f2;}
 .two{background-color:#f4f5f7;}
 .thr{background-color:#ffffff;}
+
+.img {
+	max-width: 100%;
+	height: auto;
+}
