--- a/public/css/application.css
+++ b/public/css/application.css
@@ -114,6 +114,16 @@ footer {
 .outline {
   text-shadow: 1px 1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff, -1px -1px 0 #fff;
 }
+footer {
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  padding: 30px 0;
+  position: absolute;
+  /*←絶対位置*/
+  bottom: 0;
+  /*下に固定*/
+}
 img {
   max-width: 100%;
   height: auto;
