--- a/public/scss/show.scss
+++ b/public/scss/show.scss
@@ -46,3 +46,11 @@
 	text-shadow:1px 1px 0 #FFF,-1px 1px 0 #FFF,1px -1px 0 #FFF,-1px -1px 0 #FFF;
 }
 
+footer{
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    padding: 30px 0;
+ position: absolute;/*←絶対位置*/
+    bottom: 0; /*下に固定*/
+}
