--- a/public/scss/show.scss
+++ b/public/scss/show.scss
@@ -51,6 +51,6 @@ footer{
     color: #fff;
     text-align: center;
     padding: 30px 0;
- position: absolute;/*←絶対位置*/
+ position: absolute;
     bottom: 0; /*下に固定*/
 }
